city 카테고리 추가..

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
 							<tab heading="전체" select="getHardList()"></tab>
 							<tab heading="Star Wars™" select="getCategoryList('Star Wars™','')"></tab>
 							<tab heading="Modular" select="getCategoryList('Creator','ModularBuildings')"></tab>
+							<tab heading="City" select="getCategoryList('City','')"></tab>
 							<tab heading="Ideas" select="getCategoryList('Ideas','')"></tab>
 							<tab heading="The Simpsons™" select="getCategoryList('The Simpsons™','')"></tab>
 							<tab heading="Minecraft™" select="getCategoryList('Minecraft™','')"></tab>
