--- a/intro.html
+++ b/intro.html
@@ -101,6 +101,18 @@
 
         <ul class="timeline">
 
+					<li>
+						<div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+						<div class="timeline-panel">
+							<div class="timeline-heading">
+								<h4 class="timeline-title">아마존 미국 공홈 가격 그래프</h4>
+								<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 8월 26일</small></p>
+							</div>
+							<div class="timeline-body">
+								<p>아마존의 가격 변화율과 미국 공홈의 가격 변화울을 비교해주는 기능을 추가했습니다.</p>
+							</div>
+						</div>
+					</li>
 					<li class="timeline-inverted">
 						<div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
 						<div class="timeline-panel">
