--- a/index.html
+++ b/index.html
@@ -227,7 +227,10 @@
 											 <blockquote>
 											  <p>카테고리 : {{product.category}}</p>
 											  <p>item : <cite title="Source Title">{{product.prodCode}}</cite></p>
-												<p><div class="fb-share-button" data-href="http://item.getlego.me/detail/{{product.prodCode}}" data-layout="button_count"></div></p>
+												<p>
+													<div class="fb-share-button" data-href="http://item.getlego.me/detail/{{product.prodCode}}" data-layout="button_count"></div>
+													<div class="fb-send" data-href="http://item.getlego.me/detail/{{product.prodCode}}"></div>
+												</p>
 											</blockquote>
 								     </div>
 								   </div>
