--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<script src="/js/Chart.js"></script>
 		<script src="/js/angular-chart.js"></script>
 
-		<script src="/js/controller/home.js?2015090701"></script>
+		<script src="/js/controller/home.js?2015090702"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="/css/angular-chart.css">
 		<!--
@@ -136,7 +136,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-12 text-center">
-								<span class="label label-info">{{ price }}</span>
+								<span class="label label-info" style="width:100%">{{ price }}</span>
 					      <img ng-src="{{uvImage}}" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 							</div>
 						</div>
