--- a/index2.html
+++ b/index2.html
@@ -151,7 +151,27 @@
 				  </div>
 				</div>
 			</div>
+			<div id="add_content_wrap" class="outer" style="padding-top: 20px;">
+				<section id="add_content" class="inner">
+					<div class="row">
+						<div class="col-sm-12 text-center">
+						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- 레고가격비교 -->
+						<ins class="adsbygoogle"
+						     style="display:block"
+						     data-ad-client="ca-pub-2621045516895847"
+						     data-ad-slot="8913738016"
+						     data-ad-format="auto"></ins>
+						<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>	
+						</div>
+
+					</div>
+				<section>
+			</div>			
 		</div>
+		
 		<div class="container">
 
 			<!-- MAIN CONTENT -->
