애드 센스 추가.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<script src="/js/Chart.js"></script>
 		<script src="/js/angular-chart.js"></script>
 
-		<script src="/js/controller/home.js?2015090704"></script>
+		<script src="/js/controller/home.js?2015092101"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="/css/angular-chart.css">
 		<!--
@@ -127,28 +127,21 @@
 		</div>
 		<div class="container" style="padding-bottom: 20px">
 			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;cursor: pointer;border: 1px solid #eee; border-radius: 5px;" ng-click="clickAdd(link)">
+
 				<div class="row">
-				  <div class="col-xs-4 col-md-2 text-center" style="padding-top: 10px;padding-bottom: 10px;">
-						<div class="row">
-							<div class="col-md-12 text-center">
-								<img border="0" ng-src="{{ img }}" >
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-12 text-center">
-								<span class="label label-info" style="width:100%">{{ price }}</span>
-					      <img ng-src="{{uvImage}}" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-							</div>
-						</div>
-				  </div>
-				  <div class="col-xs-8 col-md-10">
-							<div class="col-xs-12 col-md-12">
-								<h4>{{ title }} <small>{{ smallTitle }}</small></h4>
-							</div>
-							<div class="col-xs-12 col-md-12 text-overflow" style="padding-bottom: 10px;" >
-								<p style="overflow : hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;width:100%;">{{ desc }}</p>
-							</div>
-				  </div>
+					<div class="col-sm-12 text-center">
+						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- 레고가격비교 -->
+						<ins class="adsbygoogle"
+								 style="display:block"
+								 data-ad-client="ca-pub-2621045516895847"
+								 data-ad-slot="8913738016"
+								 data-ad-format="auto"></ins>
+						<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+					</div>
+
 				</div>
 			</div>
 		</div>
@@ -360,13 +353,27 @@
 			<div id="add_content_wrap" class="outer" style="padding-top: 20px;">
 				<section id="add_content" class="inner">
 					<div class="row">
-					  <div class="col-sm-12 text-center">
-							<!--
-							<script language="javascript" src="http://minishop.linkprice.com/autolink.php?a_id=A100528328&auto_id=5644&width=468&height=60&target=_blank"></script>
-						-->
-						<tenping class="adsbytenping" class="col-sm-12" tenping-ad-client="SfWOxCSwnxbm%2fcRAOTMdh06SBM8qLl7%2bfp0LGZpoFMILluNi7ZnXo%2f8g2kH8Fdwa" tenping-ad-type="CZAh6Dz83kfxX1Iv1NS%2f7w%3d%3d"></tenping><script async src='http://tenping.kr/scripts/adsbytenping.min.js' ></script>
-						</div>
-
+					  <div class="col-xs-4 col-md-2 text-center" style="padding-top: 10px;padding-bottom: 10px;">
+							<div class="row">
+								<div class="col-md-12 text-center">
+									<img border="0" ng-src="{{ img }}" >
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12 text-center">
+									<span class="label label-info" style="width:100%">{{ price }}</span>
+						      <img ng-src="{{uvImage}}" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+								</div>
+							</div>
+					  </div>
+					  <div class="col-xs-8 col-md-10">
+								<div class="col-xs-12 col-md-12">
+									<h4>{{ title }} <small>{{ smallTitle }}</small></h4>
+								</div>
+								<div class="col-xs-12 col-md-12 text-overflow" style="padding-bottom: 10px;" >
+									<p style="overflow : hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;width:100%;">{{ desc }}</p>
+								</div>
+					  </div>
 					</div>
 				<section>
 			</div>
