애드 센스 추가.

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 					</div>
 				</section>
 			</div>
-
+<!--
 			<div id="add_content_wrap" class="outer" style="padding-top: 20px;">
 				<section id="add_content" class="inner">
 					<div class="row">
@@ -377,7 +377,7 @@
 					  </div>
 					</div>
 				<section>
-			</div>
+			</div> -->
 			</div>
 
 			<div class="container"  style="padding-top: 50px;padding-bottom: 20px;">
