--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
 			</div>
 		</div>
 		<div class="container" style="padding-bottom: 20px">
-			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;cursor: pointer;border: 1px solid #eee; border-radius: 5px;" ng-click="clickAdd(link)">
+			<div class="outer" style="padding-bottom: 20px;cursor: pointer;border: 1px solid #eee; border-radius: 5px;">
 
 				<div class="row">
 					<div class="col-sm-12 text-center">
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 						<!-- 레고가격비교 -->
 						<ins class="adsbygoogle"
-								 style="display:block"
-								 data-ad-client="ca-pub-2621045516895847"
-								 data-ad-slot="8913738016"
-								 data-ad-format="auto"></ins>
+						     style="display:block"
+						     data-ad-client="ca-pub-2621045516895847"
+						     data-ad-slot="8913738016"
+						     data-ad-format="auto"></ins>
 						<script>
 						(adsbygoogle = window.adsbygoogle || []).push({});
 						</script>
