--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<script src="/js/Chart.js"></script>
 		<script src="/js/angular-chart.js"></script>
 
-		<script src="/js/controller/home.js?2015092101"></script>
+		<script src="/js/controller/home.js?2015092201"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="/css/angular-chart.css">
 		<!--
@@ -30,7 +30,7 @@
 		-->
 		<SCRIPT charset="utf-8" type="text/javascript" src="http://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=US&ID=V20070822%2FUS%2Flegospriccomp-20%2F8005%2Fcf8f905a-be42-4cb9-b7c4-a9cb72cf4832"> </SCRIPT>
 
-		<title>레고 공홈 가격비교 - 20150813001</title>
+		<title>레고 공홈 가격비교 - 2015092201</title>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -241,8 +241,8 @@
 						   <table class="table  table-striped">
 								 <tr class="active">
 									 <th class="text-center">국가</th>
-									 <th class="text-center">뱃지</th>
 									 <th class="text-center">가격</th>
+									 <th class="text-center">환전</th>
 									 <th class="text-center">수량</th>
 									 <th class="text-center">판매 메세지</th>
 									 <th></th>
@@ -253,7 +253,9 @@
 												<img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}
 											</span>
 										</td>
-										<td class="text-left" style="overflow : hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;width:100px;">{{price.badges}}</td>
+
+										<td ng-if="0 == product.salePrice" class="text-right" style="width:100px">{{price.price | number:0}} {{price.moneyType}}</td>
+										<td ng-if="0 != product.salePrice" class="text-right" style="width:100px"><strike>{{price.price | number:0}}</strike> : {{price.salePrice | number:0}} {{price.moneyType}}</td>
 								 		<td class="text-right" style="width:100px">{{price.krw | number:0}} krw</td>
 								 		<td class="text-right">{{price.buyLimit | number:0}} 개</td>
 										<td class="text-left" style="overflow : hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;width:300px;">{{price.availabilityMessage}}</td>
@@ -378,7 +380,7 @@
 					</div>
 				<section>
 			</div> -->
-			</div>
+		</div>
 
 			<div class="container"  style="padding-top: 50px;padding-bottom: 20px;">
 
