스크립트 변경. 설명 변경.

--- a/intro.html
+++ b/intro.html
@@ -94,6 +94,26 @@
 			</div><!--/.nav-collapse -->
 		</div>
 	</nav>
+	<div class="container" style="padding-bottom: 20px">
+		<div class="outer" style="padding-bottom: 20px;cursor: pointer;border: 1px solid #eee; border-radius: 5px;">
+
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- 레고가격비교 -->
+					<ins class="adsbygoogle"
+							 style="display:block"
+							 data-ad-client="ca-pub-2621045516895847"
+							 data-ad-slot="8913738016"
+							 data-ad-format="auto"></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</div>
+
+			</div>
+		</div>
+	</div>
     <div class="container">
         <div class="page-header">
             <h1 id="timeline">Release note</h1>
@@ -101,6 +121,18 @@
 
         <ul class="timeline">
 
+					<li>
+						<div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
+						<div class="timeline-panel">
+							<div class="timeline-heading">
+								<h4 class="timeline-title">구글 애드센스 추가..</h4>
+								<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 9월 22일</small></p>
+							</div>
+							<div class="timeline-body">
+								<p>구글 애드 센스 추가..</p>
+							</div>
+						</div>
+					</li>
 					<li>
 						<div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
 						<div class="timeline-panel">
