--- a/intro.html
+++ b/intro.html
@@ -95,7 +95,7 @@
 		</div>
 	</nav>
 	<div class="container" style="padding-bottom: 20px">
-		<div class="outer" style="padding-bottom: 20px;cursor: pointer;border: 1px solid #eee; border-radius: 5px;">
+		<div class="outer" style="cursor: pointer;border: 0px solid #eee; border-radius: 5px;">
 
 			<div class="row">
 				<div class="col-sm-12 text-center">
