--- a/index.html
+++ b/index.html
@@ -385,13 +385,7 @@
 			<div class="container"  style="padding-top: 50px;padding-bottom: 20px;">
 
 					<div class="row">
-					  <div class="col-sm-12 col-md-8">
-							<p class="lead">전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요.</p>
-							<p class="text-center">
-								<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" ng-click="donate()" alt="PayPal - The safer, easier way to pay online!">
-							</p>
-						</div>
-						<div class="col-sm-12 col-md-4 text-center">
+						<div class="col-sm-12 col-md-12 text-right">
 								<div class="fb-page" data-href="https://www.facebook.com/legogonghome"  data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false">
 									<div class="fb-xfbml-parse-ignore">
 										<blockquote cite="https://www.facebook.com/legogonghome">
