--- a/facebook.html
+++ b/facebook.html
@@ -94,141 +94,41 @@
 			</div><!--/.nav-collapse -->
 		</div>
 	</nav>
-    <div class="container">
-        <div class="page-header">
-            <h1 id="timeline">Release note</h1>
-        </div>
-				<div class="outer" style="cursor: pointer;border: 0px solid #eee; border-radius: 5px;">
+	<div class="container" style="padding-bottom: 20px">
+		<div class="outer" style="cursor: pointer;border: 0px solid #eee; border-radius: 5px;">
 
-					<div class="row">
-						<div class="col-sm-12 text-center">
-							<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-							<!-- 레고가격비교 -->
-							<ins class="adsbygoogle"
-									 style="display:block"
-									 data-ad-client="ca-pub-2621045516895847"
-									 data-ad-slot="8913738016"
-									 data-ad-format="auto"></ins>
-							<script>
-							(adsbygoogle = window.adsbygoogle || []).push({});
-							</script>
-						</div>
-
-					</div>
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- 레고가격비교 -->
+					<ins class="adsbygoogle"
+							 style="display:block"
+							 data-ad-client="ca-pub-2621045516895847"
+							 data-ad-slot="8913738016"
+							 data-ad-format="auto"></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
 				</div>
-        <ul class="timeline">
 
-					<li>
-						<div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h4 class="timeline-title">구글 애드센스 추가..</h4>
-								<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 9월 22일</small></p>
-							</div>
-							<div class="timeline-body">
-								<p>구글 애드 센스 추가..</p>
-							</div>
+			</div>
+			<div class="row">
+					<div class="fb-page col-sm-12" data-href="https://www.facebook.com/legogonghome"
+						data-small-header="false"
+						data-adapt-container-width="true"
+						data-hide-cover="false"
+						data-show-facepile="true"
+						data-show-posts="true">
+						<div class="fb-xfbml-parse-ignore">
+							<blockquote cite="https://www.facebook.com/legogonghome">
+								<a href="https://www.facebook.com/legogonghome">레고 공홈 정보</a>
+							</blockquote>
 						</div>
-					</li>
-					<li>
-						<div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h4 class="timeline-title">아마존 미국 공홈 가격 그래프</h4>
-								<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 8월 26일</small></p>
-							</div>
-							<div class="timeline-body">
-								<p>아마존의 가격 변화율과 미국 공홈의 가격 변화울을 비교해주는 기능을 추가했습니다.</p>
-							</div>
-						</div>
-					</li>
-					<li class="timeline-inverted">
-						<div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h4 class="timeline-title">아마존 어소시에이트 가입</h4>
-								<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 8월 4일</small></p>
-							</div>
-							<div class="timeline-body">
-								<p>아마존 어소시에이트 가입으로 일부 데이터 아마존 가격과 비교가 가능해졌습니다. 또 아마존 상품을 링크해서 구매하기 버튼을 달아 바로 구매가
-								가능하도록 하였습니다. 연동 되는 상품을 계속 늘려갈 예정입니다. 아마존에서 구매하시려면 <span class="label label-info">아마존 구매</span>을
-							  클릭 해주세요</p>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h4 class="timeline-title">도메인 등록!</h4>
-								<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 7월 24일</small></p>
-							</div>
-							<div class="timeline-body">
-								<p>드디어 도메인 등록 완료 되었습니다</p>
-								<p>http://www.getlego.me</p>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="timeline-badge info"><i class="glyphicon glyphicon-credit-card"></i></div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h4 class="timeline-title">기부 기능, 일일 환율 데이터 연동</h4>
-								<p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 7월 23일</small></p>
-							</div>
-							<div class="timeline-body">
-								<p>일일 환율 데이터를 수집하여 매일 매일 가격이 환전 되어서 표시 됩니다.</p>
-								<p>
-										<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" ng-click="donate()" alt="PayPal - The safer, easier way to pay online!">
-										<img alt="" border="0" src="https://www.paypalobjects.com/ko_KR/i/scr/pixel.gif" width="1" height="1">
-								</p>
-							</div>
-						</div>
-					</li>
-            <li class="timeline-inverted">
-							<div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4 class="timeline-title">페이스북 페이지 오픈</h4>
-                </div>
-                <div class="timeline-body">
-									<div class="fb-page col-sm-12" data-href="https://www.facebook.com/legogonghome"  data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false">
-										<div class="fb-xfbml-parse-ignore">
-											<blockquote cite="https://www.facebook.com/legogonghome">
-											<a href="https://www.facebook.com/legogonghome">레고 공홈 정보</a>
-											</blockquote>
-										</div>
-									</div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4 class="timeline-title">UI 기능 추가</h4>
-                  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 7월 14일</small></p>
-                </div>
-                <div class="timeline-body">
-                  <p>가격비교 대상 국기 이미지 추가, 판매 상태에 따라 국기 이미지 주변 색을 변경해서 상태를 알려줌</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4 class="timeline-title">가격 비교 검색 오픈</h4>
-                  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 2015년 7월 14일</small></p>
-                </div>
-                <div class="timeline-body">
-                  <p>shop.lego.com에서 검색한 URL을 이용해서 전세계 가격정보를 수집해서 보여주는 기능으로 오픈</p>
-                </div>
-              </div>
-            </li>
-        </ul>
-    </div>
+					</div>
 
+			</div>
 		</div>
+	</div>
 
 		<div class="container"  style="padding-top: 50px;padding-bottom: 20px;">
 
