--- a/facebook.html
+++ b/facebook.html
@@ -114,6 +114,8 @@
 			</div>
 			<div class="row">
 					<div class="fb-page col-sm-12" data-href="https://www.facebook.com/legogonghome"
+						data-width ="100%"
+						data-height = "1000"
 						data-small-header="false"
 						data-adapt-container-width="true"
 						data-hide-cover="false"
