--- a/facebook.html
+++ b/facebook.html
@@ -113,10 +113,10 @@
 
 			</div>
 			<div class="row">
-					<div class="fb-page col-sm-12" data-href="https://www.facebook.com/legogonghome"
-						data-width ="100%"
-						data-height = "1000"
+				<div class="col-sm-12 text-center">
+					<div class="fb-page" data-href="https://www.facebook.com/legogonghome"
 						data-small-header="false"
+						data-height = "1000"
 						data-adapt-container-width="true"
 						data-hide-cover="false"
 						data-show-facepile="true"
@@ -127,6 +127,7 @@
 							</blockquote>
 						</div>
 					</div>
+				</div>
 
 			</div>
 		</div>
