--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
 		<script src="/js/Chart.js"></script>
 		<script src="/js/angular-chart.js"></script>
 
-		<script src="/js/controller/home.js?2015090701"></script>
+		<script src="/js/controller/home.js?2015092202"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="/css/angular-chart.css">
 		<!--
@@ -30,7 +30,7 @@
 		-->
 		<SCRIPT charset="utf-8" type="text/javascript" src="http://ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&MarketPlace=US&ID=V20070822%2FUS%2Flegospriccomp-20%2F8005%2Fcf8f905a-be42-4cb9-b7c4-a9cb72cf4832"> </SCRIPT>
 
-		<title>레고 공홈 가격비교 - 20150813001</title>
+		<title>레고 공홈 가격비교 - 2015092202</title>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -46,7 +46,22 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+		<style type="text/css">
+			money:{}
+			money:before{display:inline-block;width:35px;content:'USD'}
+			money.USD:before{content:'$'}
+			money.KWR:before{content:'₩'}
+			money.GBP:before{content:'£'}
+			money.CAD:before{content:'C$'}
+			money.AUD:before{content:'A$'}
+			money.NZD:before{content:'N$'}
+			money.PLN:before{content:'zł'}
+			money.DKK:before{content:'kr'}
+			money.NOK:before{content:'kr'}
+			money.SEK:before{content:'kr'}
+			money.CZK:before{content:'Kč'}
+			money.HUF:before{content:'Ft'}
+		</style>
 	</head>
 	<body ng-controller="legoController" style="padding-top: 50px;padding-bottom: 20px;">
 	<script>
@@ -126,11 +141,10 @@
 			</div>
 		</div>
 		<div class="container" style="padding-bottom: 20px">
-			
-			<div id="add_content_wrap" class="outer" style="padding-top: 20px;">
-				<section id="add_content" class="inner">
-					<div class="row">
-						<div class="col-sm-12 text-center">
+			<div class="outer" style="cursor: pointer;border: 0px solid #eee; border-radius: 5px;">
+
+				<div class="row">
+					<div class="col-sm-12 text-center">
 						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 						<!-- 레고가격비교 -->
 						<ins class="adsbygoogle"
@@ -140,14 +154,12 @@
 						     data-ad-format="auto"></ins>
 						<script>
 						(adsbygoogle = window.adsbygoogle || []).push({});
-						</script>	
-						</div>
-
+						</script>
 					</div>
-				<section>
-			</div>			
+
+				</div>
+			</div>
 		</div>
-		
 		<div class="container">
 
 			<!-- MAIN CONTENT -->
@@ -244,23 +256,25 @@
 						   <table class="table  table-striped">
 								 <tr class="active">
 									 <th class="text-center">국가</th>
-									 <th class="text-center">뱃지</th>
 									 <th class="text-center">가격</th>
+									 <th class="text-center">환전</th>
 									 <th class="text-center">수량</th>
 									 <th class="text-center">판매 메세지</th>
 									 <th></th>
 								 </tr>
-									 <tr ng-if="'am-US' != price.country" ng-repeat="price in product.prices" data-container="body" data-toggle="tooltip" data-placement="bottom" title="{{price.availabilityMessage}}">
-								 		<td class="text-center">
+									 <tr ng-if="'am-US' != price.country " ng-repeat="price in product.prices" data-container="body" data-toggle="tooltip" data-placement="bottom" title="{{price.availabilityMessage}}">
+								 		<td class="text-center" style="width:50px">
 											<span class="label label-{{price | prodStatus}}" alt="{{price.availabilityMessage}}">
 												<img ng-src="{{price.country | countryImage}}" height="16" > {{price.country | countryName}}
 											</span>
 										</td>
-										<td class="text-left" style="overflow : hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;width:100px;">{{price.badges}}</td>
-								 		<td class="text-right" style="width:100px">{{price.krw | number:0}} krw</td>
-								 		<td class="text-right">{{price.buyLimit | number:0}} 개</td>
-										<td class="text-left" style="overflow : hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;width:300px;">{{price.availabilityMessage}}</td>
-										<td class="text-center"><a href="{{product | shopUrl:price.country}}" target="{{price.country}}"><button type="button" class="btn btn-info btn-xs">Go!</button></a></tb>
+
+										<td ng-if="0 == price.salePrice" class="text-right" style="width:150px">{{price.price | number:0}} {{price.moneyType}}</td>
+										<td ng-if="0 != price.salePrice" class="text-right" style="width:150px"><money class="price {{price.moneyType}}"><strike>{{price.price | number:0}}</strike> : {{price.salePrice | number:0}}</money></td>
+								 		<td class="text-right" style="width:150px"><money class="price KRW">{{price.krw | number:0}}</money></td>
+								 		<td class="text-right" style="width:50px">{{price.buyLimit | number:0}} 개</td>
+										<td class="text-left">{{price.availabilityMessage}}</td>
+										<td class="text-center" style="width:50px"><a href="{{product | shopUrl:price.country}}" target="{{price.country}}"><button type="button" class="btn btn-info btn-xs">Go!</button></a></tb>
 								 	</tr>
 								 	<tr class="info">
 								 		<td  colspan="2" class="text-center">평균</td>
@@ -353,18 +367,40 @@
 					</div>
 				</section>
 			</div>
-			</div>
+<!--
+			<div id="add_content_wrap" class="outer" style="padding-top: 20px;">
+				<section id="add_content" class="inner">
+					<div class="row">
+					  <div class="col-xs-4 col-md-2 text-center" style="padding-top: 10px;padding-bottom: 10px;">
+							<div class="row">
+								<div class="col-md-12 text-center">
+									<img border="0" ng-src="{{ img }}" >
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12 text-center">
+									<span class="label label-info" style="width:100%">{{ price }}</span>
+						      <img ng-src="{{uvImage}}" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+								</div>
+							</div>
+					  </div>
+					  <div class="col-xs-8 col-md-10">
+								<div class="col-xs-12 col-md-12">
+									<h4>{{ title }} <small>{{ smallTitle }}</small></h4>
+								</div>
+								<div class="col-xs-12 col-md-12 text-overflow" style="padding-bottom: 10px;" >
+									<p style="overflow : hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;width:100%;">{{ desc }}</p>
+								</div>
+					  </div>
+					</div>
+				<section>
+			</div> -->
+		</div>
 
 			<div class="container"  style="padding-top: 50px;padding-bottom: 20px;">
 
 					<div class="row">
-					  <div class="col-sm-6 col-md-8">
-							<p class="lead">전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요.</p>
-							<p class="text-center">
-								<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" ng-click="donate()" alt="PayPal - The safer, easier way to pay online!">
-							</p>
-						</div>
-						<div class="col-sm-6 col-md-4 text-center">
+						<div class="col-sm-12 col-md-12 text-right">
 								<div class="fb-page" data-href="https://www.facebook.com/legogonghome"  data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false">
 									<div class="fb-xfbml-parse-ignore">
 										<blockquote cite="https://www.facebook.com/legogonghome">
