--- a/index2.html
+++ b/index2.html
@@ -47,7 +47,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 		<style type="text/css">
-			money:{}
+			money{}
 			money:before{display:inline-block;width:35px;content:'USD'}
 			money.USD:before{content:'$'}
 			money.KWR:before{content:'₩'}
@@ -269,8 +269,8 @@
 											</span>
 										</td>
 
-										<td ng-if="0 == price.salePrice" class="text-right" style="width:150px"><money class="price {{price.moneyType}}">{{price.price | number:0}} {{price.moneyType}}</money></td>
-										<td ng-if="0 != price.salePrice" class="text-right" style="width:150px"><money class="price {{price.moneyType}}"><strike>{{price.price | number:0}}</strike> : {{price.salePrice | number:0}}</money></td>
+										<td ng-if="0 == price.salePrice" class="text-right" style="width:150px"><money class="price {{price.moneyType}}">{{price.price | number:0}}</money></td>
+										<td ng-if="0 != price.salePrice" class="text-right primary" style="width:150px"><money class="price {{price.moneyType}}">{{price.salePrice | number:0}}</money></td>
 								 		<td class="text-right" style="width:150px"><money class="price KRW">{{price.krw | number:0}}</money></td>
 								 		<td class="text-right" style="width:50px">{{price.buyLimit | number:0}} 개</td>
 										<td class="text-left">{{price.availabilityMessage}}</td>
