--- a/index2.html
+++ b/index2.html
@@ -49,18 +49,19 @@
 		<style type="text/css">
 			money{}
 			money:before{display:inline-block;width:35px;content:'USD'}
-			money.USD:before{content:'$'}
-			money.KWR:before{content:'₩'}
-			money.GBP:before{content:'£'}
-			money.CAD:before{content:'C$'}
-			money.AUD:before{content:'A$'}
-			money.NZD:before{content:'N$'}
-			money.PLN:before{content:'zł'}
-			money.DKK:before{content:'kr'}
-			money.NOK:before{content:'kr'}
-			money.SEK:before{content:'kr'}
-			money.CZK:before{content:'Kč'}
-			money.HUF:before{content:'Ft'}
+			money.USD:before{content:'$ '}
+			money.KWR:before{content:'₩ '}
+			money.GBP:before{content:'£ '}
+			money.CAD:before{content:'C$ '}
+			money.AUD:before{content:'A$ '}
+			money.NZD:before{content:'N$ '}
+			money.PLN:before{content:'zł '}
+			money.DKK:before{content:'kr '}
+			money.NOK:before{content:'kr '}
+			money.SEK:before{content:'kr '}
+			money.CZK:before{content:'Kč '}
+			money.HUF:before{content:'Ft '}
+			money.EUR:before{content:'Ft '}
 		</style>
 	</head>
 	<body ng-controller="legoController" style="padding-top: 50px;padding-bottom: 20px;">
