--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,7 @@
 			money{}
 			money:before{display:inline-block;width:35px;content:'USD'}
 			money.USD:before{content:'$ '}
-			money.KWR:before{content:'₩ '}
+			money.KRW:before{content:'₩ '}
 			money.GBP:before{content:'£ '}
 			money.CAD:before{content:'C$ '}
 			money.AUD:before{content:'A$ '}
@@ -61,7 +61,7 @@
 			money.SEK:before{content:'kr '}
 			money.CZK:before{content:'Kč '}
 			money.HUF:before{content:'Ft '}
-			money.EUR:before{content:'Ft '}
+			money.EUR:before{content:'€ '}
 		</style>
 	</head>
 	<body ng-controller="legoController" style="padding-top: 50px;padding-bottom: 20px;">
