--- a/index2.html
+++ b/index2.html
@@ -48,7 +48,6 @@
     <![endif]-->
 		<style type="text/css">
 			money{}
-			money:before{display:inline-block;width:35px;content:'USD'}
 			money.USD:before{content:'$'}
 			money.KRW:before{content:'₩'}
 			money.GBP:before{content:'£'}
@@ -56,11 +55,11 @@
 			money.AUD:before{content:'A$'}
 			money.NZD:before{content:'N$'}
 			money.PLN:after{content:'zł'}
-			money.DKK:before{content:'kr'}
-			money.NOK:before{content:'kr'}
-			money.SEK:before{content:'kr'}
-			money.CZK:before{content:'Kč'}
-			money.HUF:before{content:'Ft'}
+			money.DKK:after{content:'kr'}
+			money.NOK:after{content:'kr'}
+			money.SEK:after{content:'kr'}
+			money.CZK:after{content:'Kč'}
+			money.HUF:after{content:'Ft'}
 			money.EUR:before{content:'€'}
 		</style>
 	</head>
