--- a/index.html
+++ b/index.html
@@ -46,7 +46,22 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+		<style type="text/css">
+			money{}
+			money.USD:before{content:'$'}
+			money.KRW:before{content:'₩'}
+			money.GBP:before{content:'£'}
+			money.CAD:before{content:'C$'}
+			money.AUD:before{content:'A$'}
+			money.NZD:before{content:'N$'}
+			money.PLN:after{content:'zł'}
+			money.DKK:after{content:'kr'}
+			money.NOK:after{content:'kr'}
+			money.SEK:after{content:'kr'}
+			money.CZK:after{content:'Kč'}
+			money.HUF:after{content:'Ft'}
+			money.EUR:before{content:'€'}
+		</style>
 	</head>
 	<body ng-controller="legoController" style="padding-top: 50px;padding-bottom: 20px;">
 	<script>
@@ -180,15 +195,15 @@
 													 <table class="table table-condensed">
 														 <tr class="{{product.priceModel.average | maxPrice: product.priceModel.amazonPrice:product.priceModel.koreaPrice}}">
 															 <td class="text-center">공홈평균</td>
-															 <td class="text-right">{{product.priceModel.average | number:0}} krw</td>
+															 <td class="text-right"><money class="price KRW">{{product.priceModel.average | number:0}}</money></td>
 														 </tr>
 														 <tr class="{{product.priceModel.amazonPrice | maxPrice: product.priceModel.average:product.priceModel.koreaPrice}}">
 															 <td class="text-center">아마존</td>
-															 <td class="text-right">{{product.priceModel.amazonPrice | number:0}} krw</td>
+															 <td class="text-right"><money class="price KRW">{{product.priceModel.amazonPrice | number:0}}</money></td>
 														 </tr>
 														 <tr class="{{product.priceModel.koreaPrice | maxPrice: product.priceModel.amazonPrice:product.priceModel.average}}">
 															 <td class="text-center">한국</td>
-															 <td class="text-right">{{product.priceModel.koreaPrice | number:0}} krw</td>
+															 <td class="text-right"><money class="price KRW">{{product.priceModel.koreaPrice | number:0}}</money></td>
 														 </tr>
 													 </table>
 												 </p>
@@ -254,9 +269,9 @@
 											</span>
 										</td>
 
-										<td ng-if="0 == price.salePrice" class="text-right" style="width:150px">{{price.price | number:0}} {{price.moneyType}}</td>
-										<td ng-if="0 != price.salePrice" class="text-right" style="width:150px"><strike>{{price.price | number:0}}</strike> : {{price.salePrice | number:0}} {{price.moneyType}}</td>
-								 		<td class="text-right" style="width:150px">{{price.krw | number:0}} krw</td>
+										<td ng-if="0 == price.salePrice" class="text-right" style="width:150px"><money class="price {{price.moneyType}}">{{price.price | number:0}}</money></td>
+										<td ng-if="0 != price.salePrice" class="text-right primary" style="width:150px"><money class="price {{price.moneyType}}">{{price.salePrice | number:0}}</money></td>
+								 		<td class="text-right" style="width:150px"><money class="price KRW">{{price.krw | number:0}}</money></td>
 								 		<td class="text-right" style="width:50px">{{price.buyLimit | number:0}} 개</td>
 										<td class="text-left">{{price.availabilityMessage}}</td>
 										<td class="text-center" style="width:50px"><a href="{{product | shopUrl:price.country}}" target="{{price.country}}"><button type="button" class="btn btn-info btn-xs">Go!</button></a></tb>
@@ -315,15 +330,15 @@
 										 <table class="table table-condensed">
 											 <tr class="{{product.priceModel.average | maxPrice: product.priceModel.amazonPrice:product.priceModel.koreaPrice}}">
 												 <td class="text-center">평균</td>
-												 <td class="text-right">{{product.priceModel.average | number:0}} krw</td>
+												 <td class="text-right"><money class="price KRW">{{product.priceModel.average | number:0}}</money></td>
 											 </tr>
 											 <tr class="{{product.priceModel.amazonPrice | maxPrice: product.priceModel.average:product.priceModel.koreaPrice}}">
 												 <td class="text-center">아마존</td>
-												 <td class="text-right">{{product.priceModel.amazonPrice | number:0}} krw</td>
+												 <td class="text-right"><money class="price KRW">{{product.priceModel.amazonPrice | number:0}}</money></td>
 											 </tr>
 											 <tr class="{{product.priceModel.koreaPrice | maxPrice: product.priceModel.amazonPrice:product.priceModel.average}}">
 												 <td class="text-center">한국</td>
-												 <td class="text-right">{{product.priceModel.koreaPrice | number:0}} krw</td>
+												 <td class="text-right"><money class="price KRW">{{product.priceModel.koreaPrice | number:0}}</money></td>
 											 </tr>
 										 </table>
 									</p>
