--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
 							<tab heading="Ideas" select="getCategoryList('Ideas','')"></tab>
 							<tab heading="The Simpsons™" select="getCategoryList('The Simpsons™','')"></tab>
 							<tab heading="Minecraft™" select="getCategoryList('Minecraft™','')"></tab>
+							<tab heading="DIMENSIONS™" select="getCategoryList('DIMENSIONS™','')"></tab>
 							<tab heading="Architecture" select="getCategoryList('Architecture','')"></tab>
 							<tab heading="Technic" select="getCategoryList('Technic','')"></tab>
 							<tab heading="Minifigures" select="getCategoryList('Minifigures','')"></tab>
-							<tab heading="Scooby Doo" select="getCategoryList('Scooby Doo','')"></tab>
 						 </tabset>
 					 </div>
 				 </div>
